--- a/index.html
+++ b/index.html
@@ -6,7 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOP Landing Page</title>
 </head>
+
 <body>
     
+    <div class="header">
+        <div class="logo">Header Logo</div>
+        <div class="header-links">
+            <a href="#">header link one</a>
+            <a href="#">header link two</a>
+            <a href="#">header link three</a>
+        </div>
+    </div>
+
+    <div class="one">
+        <div class="one-left">
+            <div class="awesome">This website is awesome</div>
+            <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <button>Sign up</button>
+        </div>
+        <div>this is a placeholder for an image</div>
+    </div>
+
+    <div class="two">
+
+    </div>
+
+    <div class="three">
+
+    </div>
+
+    <div class="four">
+
+    </div>
+
+    <div class="footer">
+
+    </div>
+
 </body>
 </html>
