Styled secion 1 of landing page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
             <button>Sign up</button>
         </div>
-        <div>this is a placeholder for an image</div>
+        <div class="img-1">this is a placeholder for an image</div>
     </div>
 
     <div class="two">
