--- a/index.html
+++ b/index.html
@@ -29,7 +29,23 @@
     </div>
 
     <div class="two">
-
+        <div>Some random information.</div>
+        <div class="two-one">
+            <div class="blank-img"></div>
+            <div class="img-caption">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="two-two">
+            <div class="blank-img"></div>
+            <div class="img-caption">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="two-three">
+            <div class="blank-img"></div>
+            <div class="img-caption">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="two-four">
+            <div class="blank-img"></div>
+            <div class="img-caption">this is some subtext under an illustration or image</div>
+        </div>
     </div>
 
     <div class="three">
