styled section 2 of page

--- a/index.html
+++ b/index.html
@@ -29,22 +29,24 @@
     </div>
 
     <div class="two">
-        <div>Some random information.</div>
-        <div class="two-one">
-            <div class="blank-img"></div>
-            <div class="img-caption">this is some subtext under an illustration or image</div>
-        </div>
-        <div class="two-two">
-            <div class="blank-img"></div>
-            <div class="img-caption">this is some subtext under an illustration or image</div>
-        </div>
-        <div class="two-three">
-            <div class="blank-img"></div>
-            <div class="img-caption">this is some subtext under an illustration or image</div>
-        </div>
-        <div class="two-four">
-            <div class="blank-img"></div>
-            <div class="img-caption">this is some subtext under an illustration or image</div>
+        <div class="random">Some random information.</div>
+        <div class="two-bottom">
+            <div class="two-img">
+                <div class="blank-img"></div>
+                <div class="img-caption">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="two-img">
+                <div class="blank-img"></div>
+                <div class="img-caption">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="two-img">
+                <div class="blank-img"></div>
+                <div class="img-caption">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="two-img">
+                <div class="blank-img"></div>
+                <div class="img-caption">this is some subtext under an illustration or image</div>
+            </div>
         </div>
     </div>
 
