--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
     </div>
 
     <div class="three">
-
+        <div class="three-container">
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quote-author">-Thor, God of Thunder</div>
+        </div>
     </div>
 
     <div class="four">
