wrote html for section 4

--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
     </div>
 
     <div class="four">
-
+        <div class="four-container">
+            <div class="four-text">
+                <div>Call to action! It's time!</div>
+                <div>Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button>Sign up</button>
+        </div>
     </div>
 
     <div class="footer">
