--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <div class="four">
         <div class="four-container">
             <div class="four-text">
-                <div>Call to action! It's time!</div>
-                <div>Sign up for our product by clicking that button right over there!</div>
+                <div class="four-head">Call to action! It's time!</div>
+                <div class="four-subtext">Sign up for our product by clicking that button right over there!</div>
             </div>
             <button>Sign up</button>
         </div>
