--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
 
     <div class="footer">
-
+        <div class="footer-text">Copyright © The Odin Project 2021</div>
     </div>
 
 </body>
